# codal-libopencm3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  output.map  platformio.ini  target-locked.json  target.json  workspace.code-workspace
asm/: README.md
inc/: DynamicPwm.h  MbedI2C.h  MbedPin.h  MbedSPI.h  MbedSerial.h  MbedTimedInterruptIn.h  MbedTimer.h
ld/: README.md  stm32f103x8.ld
lib/: qfplib
lib/cocoOS_5.0.3/: library.json
lib/cocoOS_5.0.3/src/: os_assert.c
lib/nano-float/: README.md  library.json
lib/nano-float/src/: functions.c  test.c
lib/nano-float/test/: test.c
logs/: firmware.dump
mbed/: README.md
mbed/inc/: MbedI2C.h  MbedPin.h  MbedSPI.h
mbed/source/: DynamicPwm.cpp  MbedI2C.cpp  MbedPin.cpp  MbedSPI.cpp  MbedSerial.cpp  MbedTimedInterruptIn.cpp  MbedTimer.cpp
patches/: README.md
patches/codal/: build.sh  codal.json
patches/codal-core/: library.json
patches/libopencm3/lib/stm32/f1/: vector_nvic.c
samples/: README.md  main.cpp
scripts/: debug.gdb  debug.ocd  flash-codal.ocd  flash.ocd  linksrc.cmd  linksrc.sh  unlinksrc.sh
source/: MbedI2C.cpp  MbedPin.cpp  MbedSPI.cpp  MbedSerial.cpp  MbedTimer.cpp  README.md  init.cpp
src/: CmPin.cpp  CmPin.h  DynamicPwm.cpp  DynamicPwm.h  README.md  aggregate.cpp  alt_sensor.cpp  bme280.cpp  downlink.cpp  gyro_sensor.cpp.old  humid_sensor.cpp.old  main.cpp  main.cpp.old  platform.h  send_altitude_cocoos.ino  sensor.cpp  sensor_display.cpp  sensor_display.h  temp_event_sensor.cpp  temp_sensor.cpp.old  uart.cpp  unit_test.c  wisol.cpp
stm32/: README.md  library.json
stm32/baseloader/: README.md  baseloader.c  baseloader.h  flash-config.h
stm32/bluepill/: README.md  STM32BluePill.cpp  STM32BluePill.h  STM32BluePillIO.cpp  STM32BluePillIO.h  STM32BluePillPin.cpp  STM32BluePillPin.h  bluepill.cpp  bluepill.h  timer.cpp
stm32/bootloader/: README.md  bootloader.c  bootloader.h  cdc.c  cdc.h  dapboot.c  dfu.c  dummy.c.old  ghostfat.c  ghostfat.h  hf2.c  hf2.h  library.json  target.h  uf2.h  uf2cfg.h  uf2hid.h  usb_conf.c  usb_conf.c.old  usb_conf.h
stm32/bootloader/blink/: blink.c.old
stm32/bootloader/stm32f103/: target_stm32f103.c
stm32/bootloader/stm32f103/generic/: config.h
stm32/cm/: CmI2C.cpp  CmI2C.h  CmPWM.cpp  CmPWM.h  CmPin.cpp  CmPin.cpp.old  CmPin.h  CmPinMap.c  CmPinMap.cpp  CmPinMap.h  CmPinName.h  CmSPI.cpp  CmSPI.h  CmSerial.cpp  CmSerial.h  CmSingleWireSerial.cpp  CmSingleWireSerial.cpp.old  CmSingleWireSerial.h  CmSingleWireSerial.h.old  CmTimer.cpp  CmTimer.h  CmUSB.cpp  DynamicPwm.cpp  DynamicPwm.h  PeripheralPins.h  PeripheralPins.h.old  PinNamesTypes.h  README.md  application.cpp  codal_target_hal.cpp  dma.c.old  dma.h  pin_device.h  pinmap.c  pinmap.h  pinmap_common.c  platform_includes.h  pwmout_api.c  pwmout_api.c.old  pwmout_api.h  (+5 more)
stm32/hal/: README.md  codal_target_hal.cpp  library.json  main.cpp  main.cpp.old  platform_includes.h  reset_handler.c  unit_test.c
stm32/i2cint/: i2cint.cpp
stm32/logger/: logger.cpp  logger.h
stm32/model/: README.md  STM32BluePill.cpp  STM32BluePill.h  STM32BluePillPin.cpp
stm32/porting/: Arduino.h
stm32/spiint/: spiint.h
stm32/uartint/: uartint.cpp
stm32/unittest/: unittest.c  unittest.h
